# cidmath-datahub

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  databricks-common.yml  justfile  pyproject.toml
.github/ISSUE_TEMPLATE/: config.yml  data-hub-task.md  layered-reference-data.md  new-subject-bundle.md  reference-subject.md
.github/workflows/: audit-catalog-grants.yml  ci.yml  deploy-platform.yml  deploy-reference.yml  deploy-weather.yml
bundles/_platform/: README.md  databricks.yml
bundles/_platform/resources/: grants.yml  ops_setup_job.yml  schemas.yml
bundles/_platform/src/: setup_ops_tables.py
bundles/_reference/: README.md  databricks.yml
bundles/_reference/resources/: crosswalk_job.yml  cvx_job.yml  geography_country_job.yml  geography_intl_layered_job.yml  geography_job.yml  geography_layered_job.yml  geography_subdivision_job.yml  geography_subnational_job.yml  geography_views_job.yml  icd10_job.yml  icd10cm_job.yml  icd10pcs_job.yml  icd9_job.yml  icd9_procedures_job.yml  icd9cm_job.yml  loinc_job.yml  ndc_job.yml  ruca_job.yml  rxnorm_job.yml  snomed_job.yml  time_job.yml
bundles/_reference/src/: build_crosswalk.py  build_cvx.py  build_geography.py  build_geography_country.py  build_geography_subdivision.py  build_geography_subnational.py  build_geography_views.py  build_icd10.py  build_icd10cm.py  build_icd10pcs.py  build_icd9.py  build_icd9_procedures.py  build_icd9cm.py  build_loinc.py  build_ndc.py  build_ruca.py  build_rxnorm.py  build_snomed.py  build_time.py
bundles/weather/: README.md  databricks.yml
bundles/weather/resources/: nclimgrid_analysis_job.yml  nclimgrid_processed_job.yml  nclimgrid_raw_job.yml  nclimgrid_refresh_job.yml
bundles/weather/src/: build_nclimgrid_analysis.py  build_nclimgrid_processed.py  build_nclimgrid_raw.py
docs/: authoring-a-bundle.md  data-coverage.md  onboarding.md  operations.md
docs/adr/: 0001-layering-vocabulary.md  0002-schema-is-subject-not-source.md  0003-catalog-split-source-vs-integrated.md  0004-monorepo-bundle-per-domain.md  0005-discovery-tags-and-dataset-catalog.md  0006-table-and-column-naming.md  0007-update-semantics-and-history.md  0008-catalog-metadata-schema-design.md  0009-data-quality-framework.md  0010-observability-and-alerting.md  0011-testing-strategy.md  0012-identity-and-deploy-authorization.md  0013-documentation-standards.md  0014-reference-data-scope.md  0015-integrated-table-naming.md  0016-ci-enforcement-policy.md  0017-bootstrap-lessons.md  0018-access-groups-and-grant-model.md  0019-analyst-discovery-view.md  0020-geography-reference.md  0021-geography-crosswalks.md  0022-geography-international-scope.md  0023-shared-pipeline-helpers-and-gadm-matching.md  0024-international-geography-vintaging.md  0025-weather-subject-bundle-nclimgrid.md  0026-job-vs-ldp-pipeline-selection.md  0027-bundle-authoring-and-pipeline-standardization.md  0028-geography-hierarchical-filter-views.md  0029-dq-check-helper-library.md  0030-icd10-hierarchy.md  0031-icd9-hierarchy.md  0032-source-history-preservation.md  0033-catalog-grant-governance-and-drift-check.md  0034-vintage-retained-snapshot-semantics.md  0035-fact-geography-vintage-conformance.md  0036-shared-reference-table-builder.md  0037-reference-data-complexity-tiers-and-layering.md  0038-ruca-rural-urban-commuting-areas.md  0039-raw-payload-landing-zone.md  0040-orchestration-granularity.md  (+2 more)
docs/reviews/: d1-data-profiling-findings.md  i1-build-end-to-end-findings.md  i2-ops-metadata-model-findings.md  i4-i3-security-governance-findings.md  sde-review-plan.md  u3-tabledq-findings.md  u4-vocabularies-ci-findings.md
docs/runbooks/: geography-intl-adr-note-draft.md  geography-intl-layered-cutover.md  geography-layered-cutover.md  realign-ruca-source-path.sql  relayer-icd-cm-source-path.sql  relocate-cvx-ndc-volumes.sql  rename-icd-cm-tables.sql  rename-us-geography-tables.sql
scripts/ci/: check_conventions.py  validate_all_bundles.py
scripts/setup/: README.md  create_federation_policies.py  create_federation_policies.sh  create_service_principals.py  dev-policy.json  grant_catalog_permissions.sql  prod-policy.json
scripts/verify/: README.md  audit_analyst_grants.sql  audit_catalog_grants.py  verify_analyst_access.py
src/cidmath_datahub/: __init__.py
src/cidmath_datahub/common/: __init__.py  dq.py  grants.py  logging.py  naming.py  pipeline.py  reference_builder.py  registration.py  vocabularies.py
src/cidmath_datahub/dq/: __init__.py
templates/subject-bundle/: README.md  databricks_template_schema.json
tests/: conftest.py
tests/fixtures/: cvx_sample.xml  loinc_core_sample.csv  loinc_mapto_sample.csv  ndc_package_sample.txt  ndc_product_sample.txt  rxnorm_rxnconso_sample.rrf  snomed_concept_sample.txt  snomed_description_sample.txt  snomed_language_sample.txt
(+56 files in other folders)
