[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cidmath-datahub"
version = "0.1.0"
description = "Shared Python package for the CIDMATH Data Hub"
readme = "README.md"
# Matches Databricks serverless environment version 5 (Python 3.12.3),
# which our jobs target via `client: "5"` in their environment spec.
# Range is `>=3.11` rather than `>=3.12` to keep some flexibility if we
# ever need to step back to v2 (Python 3.11.10).
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "CIDMATH Data Team" }]

# Runtime dependencies are intentionally minimal. PySpark, Delta, and the
# Databricks SDK are provided by the Databricks runtime when pipelines run on
# the cluster. Anything we add here ends up in the wheel that ships to every
# bundle, so we keep it lean.
dependencies = [
    "epiweeks>=2.3",  # CDC MMWR epidemiological week calculations (pure Python)
]

[project.optional-dependencies]
# Local development extras. Install with `pip install -e .[dev]`.
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "chispa>=0.10",
    "pyspark>=3.5",         # for local data tests only
    "delta-spark>=3.2",     # for local Delta operations in tests
    "ruff>=0.5",
    "responses>=0.25",      # stub HTTP for ingestion tests
    "hypothesis>=6.0",      # property-based testing (optional)
    "build>=1.0",           # builds the wheel for DAB
    "databricks-sdk>=0.30", # for setup scripts and CI checks
    "pre-commit>=3.7",      # git hooks (ruff + tests on commit)
]

[tool.hatch.build.targets.wheel]
packages = ["src/cidmath_datahub"]

# -------- Tooling configuration --------

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["N802"]  # allow non-snake-case fixture/test names where useful

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "unit: pure logic tests (no Spark)",
    "data: DataFrame transform tests using local SparkSession",
    "integration: tests against the dev Databricks workspace",
]

[tool.coverage.run]
branch = true
source = ["src/cidmath_datahub"]
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "def __repr__",
]
